# rag-ray-haystack

./: .cursorrules  .gitignore  Makefile  README.md
.github/workflows/: build-images.yml
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py  serve_runner.py  vllm_client.py
apps/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/frontend/src/: App.jsx  styles.css
benchmarks/ew/akamai-lke/: 2026-01-29T225250Z.json  2026-01-29T230821Z.json  2026-01-29T231158Z.json  2026-01-29T231548Z.json  2026-01-29T231827Z.json  2026-01-29T232055Z.json  2026-01-29T232407Z.json  2026-01-29T235008Z.json  2026-01-30T161705Z.json  2026-01-30T204645Z.json  2026-01-30T215217Z.json  2026-01-31T230545Z.json  (+2 more)
cost/: cost-config.example.yaml  cost-config.yaml
deploy/benchmark/: stream-bench-job.yaml
deploy/helm/: dcgm-values.yaml
deploy/kuberay/: README.md  operator-values.yaml  rayservice.yaml
deploy/monitoring/: dcgm-servicemonitor.yaml  docker-compose.yml  env.example  gke-dcgm-bridge.yaml  prometheus-values.yaml  pushgateway.yaml  setup-vm.sh
deploy/netprobe/: ew-netprobe.yaml
docs/: ARCHITECTURE.md  BENCHMARKING.md  BENCHMARK_RESULTS.md  CENTRAL_MONITORING.md  COST_MODEL.md  DEPLOYMENT.md  GPU_TROUBLESHOOTING.md  IMPLEMENTATION_CHECKLIST.md  NORTH_SOUTH_BENCHMARK.md  OBSERVABILITY.md  OPERATIONS.public.md  PROJECT_STATE.public.md  QUICKSTART.md  RUNBOOK.md
docs/images/: benchmark-5run-avg.html  benchmark-7run-median.html
grafana/dashboards/: cost-analysis.json  gpu-utilization.json  itdm-unified.json  provider-comparison.json  rag-overview.json  vllm-metrics.json
infra/terraform/: README.md
scripts/: benchmark-k6.js  benchmark.sh  build-images.sh  deploy.sh  fix_gpu.sh  label_gpu_nodes.sh  push-images.sh  run_all_benchmarks.sh  run_all_benchmarks.sh.example  verify.sh
scripts/bench/: run_ns.sh
scripts/benchmark/: run_ns.sh  stream_bench.py
scripts/cost/: compute_cost.py
scripts/netprobe/: run_ew.sh
(+112 files in other folders)
