[project]
name = "rag-ray-backend"
version = "0.1.0"
description = "Ray Serve + Haystack backend for cloud-portable RAG."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.108.0",
  "haystack-ai==2.11.0",
  "pydantic==2.8.2",
  "python-json-logger==2.0.7",
  "python-multipart==0.0.9",
  "prometheus-client==0.20.0",
  "beautifulsoup4==4.12.3",
  "pypdf==4.3.1",
  "python-docx==1.1.2",
  "ray[serve]==2.9.3",
  "requests==2.32.3",
  "sentence-transformers==3.2.1",
  "httpx==0.27.2",
  "qdrant-haystack==9.5.0",
  "packaging==24.2",
  "setuptools==69.5.1",
  "uvicorn==0.30.6",
]

[tool.uv]
dev-dependencies = [
  "ruff==0.6.8",
]
